--- a/src/CSS/skill.css
+++ b/src/CSS/skill.css
@@ -1,3 +1,17 @@
+#skill div{
+    /* background-color:#9b9ea8; */
+    color: black;
+    /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
+}
+#skill div:hover{
+    background-color: #fff;
+    /* border: 1px solid red; */
+    color:black !important;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    transition:all .5s ease-in-out;
+    transform: scale(1.1);
+}
+
 @media screen and (min-width: 250px) and (max-width: 385px) {
     #skill{
         /* margin-bottom: 25%; */
