Added New Projects, Skills and Profile New Section, Dark Mode tranisition

--- a/src/CSS/projects.css
+++ b/src/CSS/projects.css
@@ -5,5 +5,5 @@
     color:black !important;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     transition:all .5s ease-in-out;
-    transform: scale(1.1);
+    /* transform: scale(1.1); */
 }
